<resources>
    <string name="app_name">Walimi</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_app_title">Walimi</string>
    <string name="hello_world">Hello World!</string>
    <string name="import_camera">Import</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="chose_camera">You chose Camera Import.</string>
    <string name="chose_gallery">You chose the Gallery.</string>
    <string name="chose_slideshow">You chose the Slideshow.</string>
    <string name="chose_tools">You chose Tools.</string>
    <string name="chose_share">You chose Share.</string>
    <string name="chose_send">You chose Send.</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_report_problem">Report Problem</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_previous_orders">Previous orders</string>
    <string name="chose_profile">\"You chose Profile\"</string>
    <string name="chose_favourites">You chose Favourites</string>
    <string name="chose_previous_orders">You chose previous orders</string>
    <string name="chose_report_problem">You chose Report a problem</string>
    <string name="chose_settings">You chose settings</string>
    <string name="food_name_placeholder">Name of food item</string>
    <string name="price_placeholder">Price of item</string>
    <string name="action_logout">Logout</string>

    <string-array name="food_items">
        <item>Bananas</item>
        <item>Apples</item>
        <item>Tomatoes</item>
        <item>Lettuce</item>
        <item>Sukuma wiki</item>
        <item>Eggplant</item>
        <item>Spinach</item>
        <item>Avocado</item>
        <item>Brocolli</item>
        <item>Garlic</item>
        <item>Peppers</item>
        <item>Cauliflower</item>
    </string-array>

    <string-array name="food_prices">
        <item>4,000 sh</item>
        <item>5,000 sh</item>
        <item>30,000 sh</item>
        <item>4,000 sh</item>
        <item>3,500 sh</item>
        <item>4,500 sh</item>
        <item>8,000 sh</item>
        <item>12,000 sh</item>
        <item>21,000 sh</item>
        <item>8,000 sh</item>
        <item>12,000 sh</item>
        <item>21,000 sh</item>
    </string-array>

    <array name="food_images">
        <item>@drawable/bananas</item>
        <item>@drawable/apples</item>
        <item>@drawable/tomatoes1</item>
        <item>@drawable/lettuce</item>
        <item>@drawable/sukuma_wiki</item>
        <item>@drawable/egg_plant</item>
        <item>@drawable/spinach</item>
        <item>@drawable/avocado</item>
        <item>@drawable/brocolli</item>
        <item>@drawable/garlic</item>
        <item>@drawable/peppers</item>
        <item>@drawable/cauliflower</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_label1">By Product</string>
    <string name="tab_label2">By Farmer</string>
    <string name="farmer_name_placeholder">Farmer Name</string>
    <string name="date_added_placeholder">Date added</string>
    <string name="decription_placeholder">Description</string>
</resources>
