<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_previous_orders"
            android:icon="@drawable/ic_menu_previous_orders"
            android:title="@string/menu_previous_orders" />
        <item
            android:id="@+id/nav_report_problem"
            android:icon="@drawable/ic_menu_report_problem"
            android:title="@string/menu_report_problem" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>